# system-pyside6

./: .gitignore  LICENSE  PySide6.pth  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  pre-commit-update.yml  release.yml  reusable_tests.yaml
src/system_pyside6/: __init__.py
testbed/: CHANGELOG  LICENSE  README.rst  pyproject.toml
