[build-system]
requires = [
    "setuptools>=80.9.0",
    "setuptools_scm==9.2.2"
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "system-pyside6"
description = "Installs components to access system PySide6 in venv"
authors = [
    { name = "John" }
]
requires-python = ">=3.9"
readme = "README.md"
dependencies = []

[tool.setuptools_scm]
root = "."

[dependency-groups]
# Extras used by developers *of* system-pyside6 are pinned to specific versions to
# ensure environment consistency.
pre-commit = [
    "pre-commit == 4.3.0",
]

test = [
    "pytest == 9.0.1",
]

[tool.ruff.lint]
# In addition to the default rules, these additional rules will be used:
extend-select = [
    "E",      # pycodestyle
    "W",      # pycodestyle
    "F",      # pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "C4",     # flake8-comprehensions
    "I",      # isort
    # The SIM rules are *very* opinionated, and don't necessarily make for better code.
    # They may be worth occasionally turning on just to see if something could actually
    # use improvement.
    # "SIM",    # flake8-simplify
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [
    "system-pyside6",
]

[tool.codespell]
skip = ".git,*.pdf,*.svg"
# the way to make case sensitive skips of words etc
ignore-regex = "\bNd\b"
ignore-words-list = "MapPin"
